# KernelGYM

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  INDEX.md  KERNELGYM_OPTIMIZATION_NOTES.md  README.md  SPEC.md  analze.ipynb  check_node.sh  create_venv.sh  deploy_node.sh  ensure_venv.sh  pyproject.toml  requirements-cuda129.txt  requirements.txt  setup.sh  start_all_with_monitor.sh  start_all_with_monitor_debug.sh  start_worker_multinode.sh  stop_all.sh  stop_node.sh  test_reward.sh
benchmarks/: README.md  run_compile_benchmark.py
benchmarks/kernels/: _reference.py  (+2 more)
docs/: COMPILE_ACCELERATION_DESIGN.md  DEPLOYMENT.md  DEVELOPMENT.md  IMPLEMENTATION_DIFFERENCES.md  SOURCE_LINEAGE.md  server-result-cache-guard.md
kernelgym/: __init__.py  common.py  deployment_profiles.py
scripts/: auto_configure.sh  benchmark_cuda_agent_compile.py  benchmark_tmp_paths.py  check_node.py  create_venv.sh  deploy_node.py  deploy_node.sh  detect_profile.sh  ensure_redis.sh  lock_gpu_clocks.sh  monitor_gpu.py  scrub_venv_env.sh  start_container.sh  stop_node.sh  test_reward.py  validate_cuda129.py  validate_runtime.py  write_redis_lock.sh
test_script/: run_evaluate_cpu_load_benchmark.sh  run_evaluate_split_compile_benchmark.sh  run_evaluate_torch_cuda_arch_benchmark.sh  test_env_stage_timing.py  test_evaluate_split_compile_dataset.py  test_full_evaluate_timing.py  test_kernelgym_cpu_worker.py
tests/: test_cuda_agent_gpu.py  test_deploy_cli.py  test_deploy_node_script.py  test_extraction_boundary.py  test_kernelbench_correctness_gpu.py  test_reward_schema_and_cuda_agent.py  test_service_cli.py  test_static_env_profiles.py  test_subprocess_pool.py  test_task_manager_resource_queues.py  test_worker_monitor.py
(+63 files in other folders)
