[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "kernelgym-reward"
version = "0.1.0"
description = "Reward-only KernelGYM service extracted from drkernel-oriented repositories."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "fastapi>=0.104",
    "ninja>=1.11",
    "numpy>=1.24",
    "packaging>=23",
    "psutil>=5.9",
    "pydantic>=2",
    "pydantic-settings>=2",
    "python-dotenv>=1",
    "python-multipart>=0.0.6",
    "redis>=5",
    "structlog>=15.1",
    "tenacity>=8",
    "uvicorn[standard]>=0.24",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.5",
    "pytest>=7.4",
    "pytest-asyncio>=0.21",
    "pytest-mock>=3.12",
    "ruff>=0.14.7",
]
tvm-ffi = ["tvm-ffi"]
cuda129 = [
    "torch==2.11.0+cu129",
    "torchvision==0.26.0+cu129",
]

[project.scripts]
kernelgym-service = "kernelgym.cli.service:main"
kernelgym-deploy = "kernelgym.cli.deploy:main"

[tool.setuptools.packages.find]
include = ["kernelgym*"]

[tool.ruff]
line-length = 119
target-version = "py310"
exclude = [
    ".git",
    ".pytest_cache",
    ".ruff_cache",
    "build",
    "dist",
    "logs",
    "py_logs",
    "tmp",
]

[tool.ruff.lint]
select = ["E9", "F"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B018"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
markers = [
    "gpu: requires a CUDA-capable runtime",
    "integration: requires external services such as Redis or API workers",
]
